--- a/_posts/2017/11/2017-11-16-cap-定理.md
+++ b/_posts/2017/11/2017-11-16-cap-定理.md
@@ -17,7 +17,7 @@ categories:
 
 ##### **分布式系统 CAP 原则** `Consistency`、`Availability`、`Partitiontolerance`
 
-[![](images/CAP.png)](http://qiniu.dev-share.top/image/png/CAP.png)
+![](images/CAP.png)
 
 - **`C`** 一致性（Consistency） `每一次读都会收到最近的写的结果或报错；表现起来像是在访问同一份数据` 一致性不是绝对的，强调的是用户外部视角的数据一致，可以通过多副本、锁、读写阻塞等方式。
     
@@ -52,7 +52,7 @@ categories:
 
 **`(conflict-free replicated data type) 无冲突复制数据类型`**
 
-[![](images/CRDT.png)](http://qiniu.dev-share.top/image/png/CRDT.png)
+![](images/CRDT.png)
 
 > - CRDT是一种可以在网络中的多台计算机上复制的数据结构，副本可以独立和并行地更新，不需要在副本之间进行协调，并保证不会有冲突发生。
 
@@ -81,7 +81,7 @@ categories:
 - 发生次数 = 所有副本计数值之和
 - 因为每个副本都只会更新自己的计数值，不会与其他计数器产生冲突，所以该类型在消息同步后便满足一致性
 
-[![](images/G-Counter.gif)](http://qiniu.dev-share.top/image/gif/G-Counter.gif)
+![](images/G-Counter.gif)
 
 **`注意：` `CRDT计数器` 很棒，但它们不能用于模拟银行账户余额，因为合并可能会使计数器变为负数——并且在应用程序级别没有办法防止这种情况发生。换句话说，CRDT 是一种有效但微妙的最终一致性形式，不适用于固有的事务问题。**
 
@@ -93,7 +93,7 @@ categories:
 - 将两个这样的状态合并就只需要做并集
 - 因为元素只增不减，不存在冲突操作，所以该类型在消息同步后便满足一致性
 
-[![](images/G-Set.gif)](http://qiniu.dev-share.top/image/gif/G-Set.gif)
+![](images/G-Set.gif)
 
 * * *
 
