--- a/_posts/2018/12/2018-12-21-（概念-五）cpu-和-内存.md
+++ b/_posts/2018/12/2018-12-21-（概念-五）cpu-和-内存.md
@@ -9,7 +9,7 @@ categories:
 
 CPU和内存其实特别简单，内存就是一个个的小格子， 每个格子都有一个编号， 格子中的数据可以被CPU所读写。
 
-[![](images/cpu.png)](http://qiniu.dev-share.top/image/png/cpu.png)
+![](images/cpu.png)
 
 **CPU 内部的构造超级复杂， 但我们这次只关注两个东西：**
 
