--- a/_posts/2019/03/2019-03-15-k8s-配置-ingress定义的路由规则集.md
+++ b/_posts/2019/03/2019-03-15-k8s-配置-ingress定义的路由规则集.md
@@ -17,7 +17,7 @@ categories:
 
   简单点说，`Ingress Controller` 就是类似一个nginx，而`Ingress`则是这个`nginx的配置`
 
-[![](images/ingress.png)](http://qiniu.dev-share.top/image/png/ingress.png)
+![](images/ingress.png)
 
 * * *
 
@@ -48,7 +48,7 @@ categories:
 
   **`Ingress`** 只是 Kubernetes 中的 **`配置路由的规则`(通俗的讲，就是配置哪些url地址，转发到哪些service上，它就是个`网关`)** ；   **`Ingress Controller`** 才是 **监听 `80/443` 端口**，并根据 **`Ingress`** 上配置的 **`路由规则`** 执行 **`HTTP/HTTPS`** 路由转发的组件。   **`Ingress Controller`** 有多种实现可供选择，比较常用的有 `Traefic`、 `Nginx Ingress Controller`等。   内部程序都是使用80端口(http协议)， 如果想让外部 **`强制`** 使用443端口(https协议)， 只需要在 `Ingress配置文件` 里面加入`tls`并 **强制 http 转发到 https**
 
-[![](images/ingress-virtual-host.png)](http://qiniu.dev-share.top/image/png/ingress-virtual-host.png)
+![](images/ingress-virtual-host.png)
 
 * * *
 
@@ -64,7 +64,7 @@ categories:
 
 #### **复杂的 Ingress Controller 架构图**
 
-[![](images/ingress-controller.png)](http://qiniu.dev-share.top/image/png/ingress-controller.png)
+![](images/ingress-controller.png)
 
 * * *
 
@@ -76,7 +76,7 @@ categories:
 
 * * *
 
-**多 Ingress Controller 部署后的结果展示图** [![](images/ingress-controller-k9s.png)](http://qiniu.dev-share.top/image/png/ingress-controller-k9s.png)
+**多 Ingress Controller 部署后的结果展示图** ![](images/ingress-controller-k9s.png)
 
 * * *
 
