--- a/_posts/2020/04/2020-04-21-kettle-联表查询-优化.md
+++ b/_posts/2020/04/2020-04-21-kettle-联表查询-优化.md
@@ -11,7 +11,7 @@ categories:
 
 * * *
 
-[![](images/kettle.png)](http://qiniu.dev-share.top/image/kettle.png)
+![](images/kettle.png)
 
 ###### **[Kettle官网](http://www.kettle.be/ "Kettle官网")**
 
