--- a/_posts/2020/10/2020-10-10-资料收集.md
+++ b/_posts/2020/10/2020-10-10-资料收集.md
@@ -87,7 +87,7 @@ categories:
 > - **混合云**
 >     - 由两个或多个独立的不同云计算基础架构（私有、社区或公有）组成，他们通过标准或私有技术被绑定在一起，实现数据和应用程序的可移植性，例如，当云爆发时实现多云之间的负载均衡
 
-NIST Cloud Computing Reference Architecture： [![](images/NIST-Cloud-Computing-Architecture.png)](http://qiniu.dev-share.top/image/NIST-Cloud-Computing-Architecture.png)
+NIST Cloud Computing Reference Architecture： ![](images/NIST-Cloud-Computing-Architecture.png)
 
 * * *
 
