--- a/_posts/2020/10/2020-10-23-cka-学习笔记一.md
+++ b/_posts/2020/10/2020-10-23-cka-学习笔记一.md
@@ -11,7 +11,7 @@ categories:
 
 #### **[kubernetes设计图](https://kubernetes.io/zh/docs/concepts/architecture/cloud-controller/#design "kubernetes设计图")**
 
-[![](images/components-of-kubernetes.png)](http://qiniu.dev-share.top/image/components-of-kubernetes.png)
+![](images/components-of-kubernetes.png)
 
 * * *
 
