--- a/_posts/2021/02/2021-02-02-什么是-bgp-边界网关协议.md
+++ b/_posts/2021/02/2021-02-02-什么是-bgp-边界网关协议.md
@@ -13,4 +13,4 @@ categories:
 
 ###### 如下图每一个运营商的DNS都是互通的，每一条绿线为一跳，由此可见跳数越少传输越快
 
-[![](images/BGP%E7%BD%91%E7%BB%9C.png)](http://qiniu.dev-share.top/image/BGP%E7%BD%91%E7%BB%9C.png)
+![](images/BGP%E7%BD%91%E7%BB%9C.png)
