--- a/_posts/2021/02/2021-02-02-什么是-cdn.md
+++ b/_posts/2021/02/2021-02-02-什么是-cdn.md
@@ -14,4 +14,4 @@ categories:
 5. 然后记录这个请求(**记录请求的ip与目标的ip进行缓存**)，下次在有相同的ip地址访问，就不需要在进行网速测试了
 6. **`CDN解决了链路长短的问题，起到了请求响应上的优化`**
 
-[![](images/%E4%BB%80%E4%B9%88%E6%98%AFCDN.png)](http://qiniu.dev-share.top/image/%E4%BB%80%E4%B9%88%E6%98%AFCDN.png)
+![](images/%E4%BB%80%E4%B9%88%E6%98%AFCDN.png)
