--- a/_posts/2021/02/2021-02-02-什么是-边缘计算.md
+++ b/_posts/2021/02/2021-02-02-什么是-边缘计算.md
@@ -11,4 +11,4 @@ categories:
 > 
 > ###### 只在需要收集、统计用户端数据时，从边缘服务器中直接获取数据。
 
-[![](images/%E4%BB%80%E4%B9%88%E6%98%AF%E8%BE%B9%E7%BC%98%E8%AE%A1%E7%AE%97.png)](http://qiniu.dev-share.top/image/%E4%BB%80%E4%B9%88%E6%98%AF%E8%BE%B9%E7%BC%98%E8%AE%A1%E7%AE%97.png)
+![](images/%E4%BB%80%E4%B9%88%E6%98%AF%E8%BE%B9%E7%BC%98%E8%AE%A1%E7%AE%97.png)
