--- a/_posts/2022/03/2022-03-16-go-语言学习笔记.md
+++ b/_posts/2022/03/2022-03-16-go-语言学习笔记.md
@@ -125,7 +125,7 @@ categories:
 
 ##### if{} else if{} else{}
 
-    if 可以包含一个初始化语句（如：给一个变量赋值）。这种写法具有固定的格式（在初始化语句后方必须加上分号）     但要注意的是，使用简短方式 **`:=`** 声明的变量的作用域只存在于 if 结构中（在 if 结构的大括号之间，如果使用 if-else 结构则在 else 代码块中变量也会存在）。 [![](images/Go_if_else.png)](http://qiniu.dev-share.top/image/png/Go_if_else.png)
+    if 可以包含一个初始化语句（如：给一个变量赋值）。这种写法具有固定的格式（在初始化语句后方必须加上分号）     但要注意的是，使用简短方式 **`:=`** 声明的变量的作用域只存在于 if 结构中（在 if 结构的大括号之间，如果使用 if-else 结构则在 else 代码块中变量也会存在）。 ![](images/Go_if_else.png)
 
     如果变量在 if 结构之前就已经存在，那么在 if 结构中，该变量原来的值会被隐藏。
 
@@ -359,15 +359,15 @@ func main() {
 
 ##### **[值类型和引用类型](https://github.com/unknwon/the-way-to-go_ZH_CN/blob/4468f9ff3a49868ce1033055101113284efc5679/eBook/04.4.md#442-%E5%80%BC%E7%B1%BB%E5%9E%8B%E5%92%8C%E5%BC%95%E7%94%A8%E7%B1%BB%E5%9E%8B "值类型和引用类型")**
 
-    程序中所用到的内存在计算机中使用一堆箱子来表示（这也是人们在讲解它的时候的画法），这些箱子被称为 `"字"`。根据不同的处理器以及操作系统类型，所有的字都具有 32 位（4 字节）或 64 位（8 字节）的相同长度；所有的字都使用相关的内存地址来进行表示（以十六进制数表示）。     所有像 **int、float、bool 和 string** 这些基本类型**都属于`值类型`**，使用这些类型的变量直接指向存在内存中的值： [![](images/golang_fig4.1.jpg)](http://qiniu.dev-share.top/image/jpg/golang_fig4.1.jpg)
+    程序中所用到的内存在计算机中使用一堆箱子来表示（这也是人们在讲解它的时候的画法），这些箱子被称为 `"字"`。根据不同的处理器以及操作系统类型，所有的字都具有 32 位（4 字节）或 64 位（8 字节）的相同长度；所有的字都使用相关的内存地址来进行表示（以十六进制数表示）。     所有像 **int、float、bool 和 string** 这些基本类型**都属于`值类型`**，使用这些类型的变量直接指向存在内存中的值： ![](images/golang_fig4.1.jpg)
 
 * * *
 
-    另外，像数组（**`[]`**）和结构（**`struct`**）这些复合类型也是值类型。     当使用等号 **`=`** 将一个变量的值赋值给另一个变量时，如：**`j = i`**，实际上是在内存中将 **`i`** 的值进行了**`拷贝`**： [![](images/golang_fig4.2.jpg)](http://qiniu.dev-share.top/image/jpg/golang_fig4.2.jpg)
+    另外，像数组（**`[]`**）和结构（**`struct`**）这些复合类型也是值类型。     当使用等号 **`=`** 将一个变量的值赋值给另一个变量时，如：**`j = i`**，实际上是在内存中将 **`i`** 的值进行了**`拷贝`**： ![](images/golang_fig4.2.jpg)
 
 * * *
 
-    你可以通过 **`&i`** 来获取变量 **`i`** 的内存地址，例如：**`0xf840000040`**（每次的地址都可能不一样）。**值类型的变量的值`存储在栈中`**。     内存地址会根据机器的不同而有所不同，甚至相同的程序在不同的机器上执行后也会有不同的内存地址。因为每台机器可能有不同的存储器布局，并且位置分配也可能不同。     更复杂的数据通常会需要使用多个字，这些数据一般使用引用类型保存。     一个引用类型的变量 **`r1`** 存储的是 **`r1`** 的值所在的内存地址（数字），或内存地址中第一个字所在的位置。 [![](images/golang_fig4.3.jpg)](http://qiniu.dev-share.top/image/jpg/golang_fig4.3.jpg)
+    你可以通过 **`&i`** 来获取变量 **`i`** 的内存地址，例如：**`0xf840000040`**（每次的地址都可能不一样）。**值类型的变量的值`存储在栈中`**。     内存地址会根据机器的不同而有所不同，甚至相同的程序在不同的机器上执行后也会有不同的内存地址。因为每台机器可能有不同的存储器布局，并且位置分配也可能不同。     更复杂的数据通常会需要使用多个字，这些数据一般使用引用类型保存。     一个引用类型的变量 **`r1`** 存储的是 **`r1`** 的值所在的内存地址（数字），或内存地址中第一个字所在的位置。 ![](images/golang_fig4.3.jpg)
 
 * * *
 
@@ -797,7 +797,7 @@ type Test struct{ x, y int }
 
 ##### 下图说明了结构体类型实例和一个指向它的指针的内存布局：
 
-    **使用 new 初始化**： [![](images/golang_struct_new_init.png)](http://qiniu.dev-share.top/image/png/golang_struct_new_init.png)
+    **使用 new 初始化**： ![](images/golang_struct_new_init.png)
 
 1. 初始化Test类型
 2. 分配内存（在内存中为Test类型开辟空间，并赋上初始值）
@@ -805,14 +805,14 @@ type Test struct{ x, y int }
 
 * * *
 
-    **作为结构体字面量初始化：** [![](images/golang_struct_const_init_01.png)](http://qiniu.dev-share.top/image/png/golang_struct_const_init_01.png)
+    **作为结构体字面量初始化：** ![](images/golang_struct_const_init_01.png)
 
 1. 初始化Test类型
 2. 分配内存（在内存中为Test类型开辟空间，并赋上初始值），直接返回已分配内存的**内存地址**
 
 * * *
 
-[![](images/golang_struct_const_init_02.png)](http://qiniu.dev-share.top/image/png/golang_struct_const_init_02.png)     表达式 **`new(Type)`** 和 **`&Type{}` 是等价的**。     **混合字面量语法**（composite literal syntax）**`&struct1{a, b, c}`** 是一种简写，底层仍然会调用 **`new()`** ，这里值的顺序**必须按照字段顺序**来写。
+![](images/golang_struct_const_init_02.png)     表达式 **`new(Type)`** 和 **`&Type{}` 是等价的**。     **混合字面量语法**（composite literal syntax）**`&struct1{a, b, c}`** 是一种简写，底层仍然会调用 **`new()`** ，这里值的顺序**必须按照字段顺序**来写。
 
 * * *
 
@@ -1704,7 +1704,7 @@ func BenchmarkCalc(b *testing.B) {
     
     - **数据在通道中**进行传递：在任何给定时间，**一个数据被设计为`只有一个协程可以对其访问`**，所以**不会发生数据竞争**。 数据的所有权（可以读写数据的能力）也因此被传递。
 
-[![](images/golang_channels_and_goroutines.png)](http://qiniu.dev-share.top/image/png/golang_channels_and_goroutines.png)
+![](images/golang_channels_and_goroutines.png)
 
 **声明通道：`var identifier chan datatype`未初始化的通道的值是 `nil` 。所有的类型都可以用于通道**
 
@@ -2300,7 +2300,7 @@ func main() {
 ###### **[典型的客户端/服务器（C/S）模式](https://github.com/unknwon/the-way-to-go_ZH_CN/blob/master/eBook/14.10.md#14101-%E5%85%B8%E5%9E%8B%E7%9A%84%E5%AE%A2%E6%88%B7%E7%AB%AF%E6%9C%8D%E5%8A%A1%E5%99%A8cs%E6%A8%A1%E5%BC%8F "典型的客户端/服务器（C/S）模式")**
 
 - 使用 Go 的服务器通常会在协程中执行向客户端的响应，故而会对 **每一个客户端请求启动`一个协程`** 。一个常用的操作方法是**`客户端`请求自身中包含一个`通道`** ，而服务器则向这个通道发送响应。
-- **`server`** 协程会无限循环以从 **`chan *Request`** 接收请求，并且为了避免被长时间操作所堵塞，它将为**每一个请求启动一个协程**来做具体的工作。 [![](images/golang_c_s.png)](http://qiniu.dev-share.top/image/png/golang_c_s.png)
+- **`server`** 协程会无限循环以从 **`chan *Request`** 接收请求，并且为了避免被长时间操作所堵塞，它将为**每一个请求启动一个协程**来做具体的工作。 ![](images/golang_c_s.png)
 
 * * *
 
