--- a/_posts/2022/06/2022-06-29-flink-cdc-安装部署.md
+++ b/_posts/2022/06/2022-06-29-flink-cdc-安装部署.md
@@ -17,7 +17,7 @@ categories:
 
 ### **对比常见的开源 CDC 方案**
 
-[![](images/cdc-tools-compare.png)](http://qiniu.dev-share.top/image/png/cdc-tools-compare.png)
+![](images/cdc-tools-compare.png)
 
 ### Flink CDC 概述
 
@@ -29,15 +29,15 @@ categories:
 >     - 然后，将 **Debezium** 拿到的数据，在传给 **Apache Flink**
 >     - 最后，在使用 **Apache Flink** 进行数据处理，把处理好的数据传给你想要的程序
 
-[![](images/flinkcdc.png)](http://qiniu.dev-share.top/image/png/flinkcdc.png)
+![](images/flinkcdc.png)
 
 * * *
 
-> - **传统的 CDC** [![](images/tradition-cdc.jpg)](http://qiniu.dev-share.top/image/png/tradition-cdc.jpg)
+> - **传统的 CDC** ![](images/tradition-cdc.jpg)
 
 * * *
 
-> - **Flink CDC** [![](images/flink-cdc.png)](http://qiniu.dev-share.top/image/png/flink-cdc.png)
+> - **Flink CDC** ![](images/flink-cdc.png)
 
 * * *
 
