--- a/_posts/2022/07/2022-07-25-微服务架构设计模式学习.md
+++ b/_posts/2022/07/2022-07-25-微服务架构设计模式学习.md
@@ -68,7 +68,7 @@ categories:
 
 * * *
 
-每项技术都有它的**弊端和限制**，这些总是被它们的鼓吹者所忽视。因此，某些技术的应用通常都会跟**光环曲线**一样先抑后扬。 [![](images/%E5%85%89%E7%8E%AF%E6%9B%B2%E7%BA%BF.jpg)](http://qiniu.dev-share.top/image/jpg/%E5%85%89%E7%8E%AF%E6%9B%B2%E7%BA%BF.jpg) **因此，`盲目的鼓吹`微服务架构是`非常不好`的。** **当然，把微服务架构`拒之千里`之外似乎也`不是什么明智之举`。**
+每项技术都有它的**弊端和限制**，这些总是被它们的鼓吹者所忽视。因此，某些技术的应用通常都会跟**光环曲线**一样先抑后扬。 ![](images/%E5%85%89%E7%8E%AF%E6%9B%B2%E7%BA%BF.jpg) **因此，`盲目的鼓吹`微服务架构是`非常不好`的。** **当然，把微服务架构`拒之千里`之外似乎也`不是什么明智之举`。**
 
 * * *
 
