--- a/_posts/2022/08/2022-08-17-微服务上云相关资料.md
+++ b/_posts/2022/08/2022-08-17-微服务上云相关资料.md
@@ -66,7 +66,7 @@ categories:
 
 ### 可能遇到的问题
 
-[![](images/possible_problems.png)](http://qiniu.dev-share.top/image/png/possible_problems.png)
+![](images/possible_problems.png)
 
 * * *
 
