--- a/_posts/2022/08/2022-08-23-redis-企业版，实现多主同步.md
+++ b/_posts/2022/08/2022-08-23-redis-企业版，实现多主同步.md
@@ -141,9 +141,9 @@ docker-compose exec rp2_node2  redis-cli -p 12000
 
 ##### **多主网络图**
 
-[![](images/RedisLabs-Active-Active.png)](http://qiniu.dev-share.top/image/png/RedisLabs-Active-Active.png)
+![](images/RedisLabs-Active-Active.png)
 
-**容器内域名映射** [![](images/RedisLabs-Active-Active-hosts.png)](http://qiniu.dev-share.top/image/png/RedisLabs-Active-Active-hosts.png)
+**容器内域名映射** ![](images/RedisLabs-Active-Active-hosts.png)
 
 * * *
 
