--- a/_posts/2022/09/2022-09-15-了解-redis-集群工作原理.md
+++ b/_posts/2022/09/2022-09-15-了解-redis-集群工作原理.md
@@ -9,11 +9,11 @@ categories:
 
 ##### **集群模式下的 Redis-工作原理图**
 
-> [![](images/Redis-Cluster%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86.png)](http://qiniu.dev-share.top/image/png/Redis-Cluster%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86.png)
+> ![](images/Redis-Cluster%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86.png)
 
 ##### **哨兵模式下的 Redis-工作原理图**
 
-> [![](images/Redis.gif)](http://qiniu.dev-share.top/image/gif/Redis.gif)
+> ![](images/Redis.gif)
 
 * * *
 
