--- a/_posts/2023/01/2023-01-08-了解学习-linux-操作系统.md
+++ b/_posts/2023/01/2023-01-08-了解学习-linux-操作系统.md
@@ -7,11 +7,11 @@ categories:
 
 ## CentOS 系统的启动流程
 
-[![](images/01.png)](http://qiniu.dev-share.top/image/linux/file-permission-images/01.png)
+![](images/01.png)
 
 ## Linux 系统文件的基本属性
 
-- [![](images/02.png)](http://qiniu.dev-share.top/image/linux/file-permission-images/02.png)
+- ![](images/02.png)
 
 ### 第一列 它有11个字符
 
@@ -149,7 +149,7 @@ categories:
     
 - **命令 `chattr +i filename` `chattr -i filename`**
     
-    - [![](images/08.png)](http://qiniu.dev-share.top/image/linux/file-permission-images/08.png)
+    - ![](images/08.png)
 
 #### **只追加权限**
 
@@ -162,7 +162,7 @@ categories:
     
 - 命令 `chattr +a filename` `chattr -a filename`
     
-    - [![](images/09.png)](http://qiniu.dev-share.top/image/linux/file-permission-images/09.png)
+    - ![](images/09.png)
 
 ### 特殊权限
 
@@ -182,11 +182,11 @@ categories:
     
 - **命令 `chmod +s filename` `chmod -s filename`**
     
-    - [![](images/03.png)](http://qiniu.dev-share.top/image/linux/file-permission-images/03.png)
+    - ![](images/03.png)
     - 查看结果：未设置相应的`x`权限，结果以大`S`显示
-    - [![](images/04.png)](http://qiniu.dev-share.top/image/linux/file-permission-images/04.png)
+    - ![](images/04.png)
     - 查看结果：设置相应的`x`权限，结果以小`s`显示
-    - [![](images/05.png)](http://qiniu.dev-share.top/image/linux/file-permission-images/05.png)
+    - ![](images/05.png)
 
 #### **粘滞位（stick bit）**
 
@@ -203,9 +203,9 @@ categories:
     
 - **命令 `chmod +t filename` `chmod -t filename`**
     
-    - [![](images/06.png)](http://qiniu.dev-share.top/image/linux/file-permission-images/06.png)
+    - ![](images/06.png)
     - 查看结果：同样的，当没有`x`权限的时候，为大写`T`
-    - [![](images/07.png)](http://qiniu.dev-share.top/image/linux/file-permission-images/07.png)
+    - ![](images/07.png)
 
 #### `su 和 sudo`
 
