--- a/_posts/2023/01/2023-01-14-了解学习-linux-操作系统-2-网络管理.md
+++ b/_posts/2023/01/2023-01-14-了解学习-linux-操作系统-2-网络管理.md
@@ -42,7 +42,7 @@ categories:
         
     - 如果不使用VPN设备可能会这样实现
         
-        - [![](images/VPN01.png)](http://qiniu.dev-share.top/image/linux/VPN01.png)
+        - ![](images/VPN01.png)
     - 当下最新的简单的理解工作原理
         
-        - [![](images/VPN02.png)](http://qiniu.dev-share.top/image/linux/VPN02.png)
+        - ![](images/VPN02.png)
