--- a/_posts/2023/01/2023-01-14-了解学习-linux-操作系统-3-进程管理.md
+++ b/_posts/2023/01/2023-01-14-了解学习-linux-操作系统-3-进程管理.md
@@ -75,4 +75,4 @@ categories:
         
 - `htop`
     
-    - [![](images/htop-01.png)](http://qiniu.dev-share.top/image/linux/htop-01.png)
+    - ![](images/htop-01.png)
