--- a/_posts/2023/03/2023-03-04-redis-发布-订阅.md
+++ b/_posts/2023/03/2023-03-04-redis-发布-订阅.md
@@ -7,15 +7,15 @@ categories:
 
 ## 创建3个Redis客户端
 
-[![](images/clients.png)](http://qiniu.dev-share.top/image/clients.png)
+![](images/clients.png)
 
 ## 查看Redis集群信息和Redis访问地址
 
-[![](images/redis-cluster-info.png)](http://qiniu.dev-share.top/image/redis-cluster-info.png)
+![](images/redis-cluster-info.png)
 
 ## 测试Redis客户端的 发布订阅
 
-[![](images/redis-pub-sub.gif)](http://qiniu.dev-share.top/image/gif/redis-pub-sub.gif)
+![](images/redis-pub-sub.gif)
 
 ## Redis 发布订阅命令
 
