--- a/_posts/2023/03/2023-03-10-零散学习整理.md
+++ b/_posts/2023/03/2023-03-10-零散学习整理.md
@@ -984,7 +984,7 @@ git push origin <分支名称> --force
 
 #### **差分隐私常用的三种机制**
 
-[![](images/chafenyinsi.png)](http://qiniu.dev-share.top/image/chafenyinsi.png)
+![](images/chafenyinsi.png)
 
 #### **`中心化差分隐私`和`本地化差分隐私`的区别是什么？**
 
