--- a/_posts/2023/03/2023-03-30-理解arp作用与工作原理.md
+++ b/_posts/2023/03/2023-03-30-理解arp作用与工作原理.md
@@ -56,4 +56,4 @@ categories:
 > - 而**`三层路由`** 也称为`网络层路由`）则是通过 IP 地址来决定数据包的转发，通常涉及到路由器的操作。
 > - 因此，**`二层路由`** 应该理解为在数据链路层上的路由，而不是在网络层上的路由。
 
-[![](images/ARP.gif)](http://qiniu.dev-share.top/image/gif/ARP.gif)
+![](images/ARP.gif)
