--- a/_posts/2023/06/2023-06-28-架构师该做什么？.md
+++ b/_posts/2023/06/2023-06-28-架构师该做什么？.md
@@ -28,7 +28,7 @@ categories:
 
 * * *
 
-> 3. 工作参与度 [![](images/EA.png)](http://qiniu.dev-share.top/image/EA.png)
+> 3. 工作参与度 ![](images/EA.png)
 
 * * *
 
