--- a/_posts/2023/10/2023-10-22-树莓派4b-传感器接入实验.md
+++ b/_posts/2023/10/2023-10-22-树莓派4b-传感器接入实验.md
@@ -7,7 +7,7 @@ categories:
 
 # 知识补充
 
-[![](images/raspberry-pi-4.png)](http://qiniu.dev-share.top/image/raspberry-pi-4.png)
+![](images/raspberry-pi-4.png)
 
 > 每个传感器的接入都必须要有的两个引脚，分别是`正极引脚`和`负极引脚`
 > 
