--- a/_posts/2023/11/2023-11-09-多用户压力测试.md
+++ b/_posts/2023/11/2023-11-09-多用户压力测试.md
@@ -286,7 +286,7 @@ const questions = [
 
 #### 开始测试
 
-[![](images/k6-VU10.png)](http://qiniu.dev-share.top/image/k6-VU10.png)
+![](images/k6-VU10.png)
 
 * * *
 
