--- a/_posts/2023/11/2023-11-13-fastchat-接入大模型.md
+++ b/_posts/2023/11/2023-11-13-fastchat-接入大模型.md
@@ -344,9 +344,9 @@ python -m fastchat.serve.model_worker \
 
 ### 实际效果
 
-[![](images/multi_model_worker_01.png)](http://qiniu.dev-share.top/image/multi_model_worker_01.png)
+![](images/multi_model_worker_01.png)
 
-[![](images/multi_model_worker_02.png)](http://qiniu.dev-share.top/image/multi_model_worker_02.png) **在工作时会多出一个多进程管理程序，这是正常的** `/home/cloud/anaconda3/envs/4090/bin/python -c "from multiprocessing.spawn import spawn_main; spawn_main(tracker_fd=9, pipe_handle=18)" --multiprocessing-fork`
+![](images/multi_model_worker_02.png) **在工作时会多出一个多进程管理程序，这是正常的** `/home/cloud/anaconda3/envs/4090/bin/python -c "from multiprocessing.spawn import spawn_main; spawn_main(tracker_fd=9, pipe_handle=18)" --multiprocessing-fork`
 
 * * *
 
@@ -356,11 +356,11 @@ python -m fastchat.serve.model_worker \
 > - FastChat的`Model Worker`通过为子进程分配GPU资源来工作。在一机多卡的情况下，需要预先指定所有GPU的编号。然后，你可以设定`Model Worker`启动相应数量的子进程，以便高效地利用这些GPU资源。
 > - 如果期望实现高可用性的负载均衡并最大化GPU利用率，你可以启动多个`Model Worker`服务。
 
-[![](images/multi_model_worker_03.png)](http://qiniu.dev-share.top/image/multi_model_worker_03.png)
+![](images/multi_model_worker_03.png)
 
 > - 在优化资源分配时，子进程的数量是可控的。为了达到最佳性能，建议将子进程的数量与GPU的数量保持一致。
 
-[![](images/multi_model_worker_04.png)](http://qiniu.dev-share.top/image/multi_model_worker_04.png)
+![](images/multi_model_worker_04.png)
 
 * * *
 
