--- a/_posts/2023/12/2023-12-07-使用-harbor-代理公共镜像.md
+++ b/_posts/2023/12/2023-12-07-使用-harbor-代理公共镜像.md
@@ -15,19 +15,19 @@ categories:
 
 - > 亲测可用的目前是`Docker-hub`、`Github-GHCR`，这里以配置`Docker-hub`为例
     
-- [![](images/harbor-proxy-01.png)](http://qiniu.dev-share.top/image/harbor-proxy-01.png)
+- ![](images/harbor-proxy-01.png)
     
 - 查看结果
-- [![](images/harbor-proxy-02.png)](http://qiniu.dev-share.top/image/harbor-proxy-02.png)
+- ![](images/harbor-proxy-02.png)
 
 ### 创建项目 `dockerhub`
 
 - > 创建项目，开启镜像代理，选择已经创建的`Docker-hub`仓库
     
-- [![](images/harbor-proxy-03.png)](http://qiniu.dev-share.top/image/harbor-proxy-03.png)
+- ![](images/harbor-proxy-03.png)
     
 - 查看结果
-- [![](images/harbor-proxy-04.png)](http://qiniu.dev-share.top/image/harbor-proxy-04.png)
+- ![](images/harbor-proxy-04.png)
 
 ## Docker客户端，使用代理服务
 
