--- a/_posts/2023/12/2023-12-13-向量数据库调研.md
+++ b/_posts/2023/12/2023-12-13-向量数据库调研.md
@@ -9,7 +9,7 @@ categories:
 
 ## 整体流程
 
-[![](images/milvus-00.jpg)](http://qiniu.dev-share.top/image/milvus/milvus-00.jpg)
+![](images/milvus-00.jpg)
 
 ## 选型
 
@@ -30,7 +30,7 @@ categories:
 
 ## 向量数据库是如何工作的？
 
-> 向量数据库能够快速检索查询中的类似对象，因为它们已经预先计算过了。其基本概念被称为`近似最近邻`（Approximate Nearest Neighbor：`ANN`）搜索，它使用不同的算法来索引和计算相似性。 近似最近邻算法（Approximate Nearest Neighbor, ANN）则是**`一种通过牺牲精度来换取时间和空间的方式从大量样本中获取最近邻的方法`**，并以其存储空间少、查找效率高等优点引起了人们的广泛关注。 严格地讲，ANN 是一种在NN 搜索过程中允许少量误差的算法。 http://www.cs.umd.edu/~mount/ANN/ [![](images/milvus-01.gif)](http://qiniu.dev-share.top/image/milvus/milvus-01.gif)
+> 向量数据库能够快速检索查询中的类似对象，因为它们已经预先计算过了。其基本概念被称为`近似最近邻`（Approximate Nearest Neighbor：`ANN`）搜索，它使用不同的算法来索引和计算相似性。 近似最近邻算法（Approximate Nearest Neighbor, ANN）则是**`一种通过牺牲精度来换取时间和空间的方式从大量样本中获取最近邻的方法`**，并以其存储空间少、查找效率高等优点引起了人们的广泛关注。 严格地讲，ANN 是一种在NN 搜索过程中允许少量误差的算法。 http://www.cs.umd.edu/~mount/ANN/ ![](images/milvus-01.gif)
 
 ## 对比ES
 
@@ -47,11 +47,11 @@ categories:
 
 ## Milvus 工作流程
 
-[![](images/milvus-02.jpg)](http://qiniu.dev-share.top/image/milvus/milvus-02.jpg)
+![](images/milvus-02.jpg)
 
 ## Milvus 架构
 
-[![](images/milvus-03.jpg)](http://qiniu.dev-share.top/image/milvus/milvus-03.jpg)
+![](images/milvus-03.jpg)
 
 #### Milvus 架构的概览
 
@@ -83,7 +83,7 @@ categories:
 
 ### 架构升级
 
-[![](images/milvus-04.png)](http://qiniu.dev-share.top/image/milvus/milvus-04.png)
+![](images/milvus-04.png)
 
 ### Upsert
 
@@ -95,7 +95,7 @@ categories:
 >     
 > - 所以很多用户会出现说为什么删除数据之后磁盘空间还没有释放，是因为删除的数据`只是加了一行删除记录`，需要等到`Compaction`之后才会`标记删除`，然后在等一次GC之后被`标记删除`的数据才会被删掉，至少要等`24小时`。当然这个参数是可以调整的。
 > 
-> **`所以 Upsert不要滥用`** [![](images/milvus-05.png)](http://qiniu.dev-share.top/image/milvus/milvus-05.png)
+> **`所以 Upsert不要滥用`** ![](images/milvus-05.png)
 
 ### RangeSearch
 
@@ -105,7 +105,7 @@ categories:
 >     
 > - 这里要注意`radius`和`range_filter`的使用
 >     
-> - [![](images/milvus-06.png)](http://qiniu.dev-share.top/image/milvus/milvus-06.png)
+> - ![](images/milvus-06.png)
 >     
 >     - #### radius
 >         
@@ -124,7 +124,7 @@ categories:
 
 ### ScaerNN Index
 
-> [![](images/milvus-07.png)](http://qiniu.dev-share.top/image/milvus/milvus-07.png)
+> ![](images/milvus-07.png)
 
 ### MMap
 
@@ -157,7 +157,7 @@ categories:
 - A7.QN返回查询结果
 - A8.Proxy返回查询结果
 
-[![](images/milvus-09.png)](http://qiniu.dev-share.top/image/milvus/milvus-09.png)
+![](images/milvus-09.png)
 
 移出 CentOS 7 支持，目前支持 Ubuntu
 
