--- a/_posts/2024/03/2024-03-27-构建人工智能评测、训练数据库集.md
+++ b/_posts/2024/03/2024-03-27-构建人工智能评测、训练数据库集.md
@@ -43,11 +43,11 @@ contexts:水在海平面下沸腾的温度是100摄氏度。,
 
 #### 点击`提交`进行数据集格式转换
 
-[![](images/create_dataset.png)](http://qiniu.dev-share.top/image/create_dataset.png)
+![](images/create_dataset.png)
 
 #### 点击`导出`会下载生成的数据集.zip
 
-[![](images/export.png)](http://qiniu.dev-share.top/image/export.png)
+![](images/export.png)
 
 * * *
 
