--- a/_posts/2024/03/2024-03-28-思维链.md
+++ b/_posts/2024/03/2024-03-28-思维链.md
@@ -15,7 +15,7 @@ categories:
 > - 使用提示工程，我们可以使用 LLM 来执行各种任务，从简单的问答到复杂的创意文本生成。
 > - 它基于一个涌现属性，即上下文学习，允许 LLM 从提示中学习。提示工程提高了 LLM 在手头任务上的性能。如前所述，它使用`零样本`、`少样本`、`主动`和`CoT`提示。
 > 
-> [![](images/What_is_Prompt_Engineering-01.png)](http://qiniu.dev-share.top/image/LLM/What_is_Prompt_Engineering-01.png)
+> ![](images/What_is_Prompt_Engineering-01.png)
 
 ### Zero-shot Prompting 零样本提示
 
@@ -64,7 +64,7 @@ categories:
     >     - 对于难以或不可能一步解决的复杂问题，它特别有用。
     >     - 它为模型的行为提供了一个可解释的窗口。我们可以看到模型是如何通过遵循它所采取的一系列步骤来得出答案的。
     > 
-    > [![](images/What_is_Prompt_Engineering-02.png)](http://qiniu.dev-share.top/image/LLM/What_is_Prompt_Engineering-02.png)
+    > ![](images/What_is_Prompt_Engineering-02.png)
     
 
 ### 零样本CoT
@@ -74,17 +74,17 @@ categories:
     > - 要执行`零样本思维链`提示，只需要在提示末尾附加`让我们一步一步地思考`。
     > - 这迫使模型分步思考，并分步或更小的部分分解问题。下面是一个示例，说明当不使用和使用思维链提示时会发生什么情况：
     > 
-    > [![](images/CoT_example_01.png)](http://qiniu.dev-share.top/image/LLM/CoT_example_01.png) 在这里可以看到，没有分步思考的提示会立即导致错误的答案。 `使用思维链`能够让`LLM`返回更好、更复杂和正确的输出。
+    > ![](images/CoT_example_01.png) 在这里可以看到，没有分步思考的提示会立即导致错误的答案。 `使用思维链`能够让`LLM`返回更好、更复杂和正确的输出。
     
 - > [零样本 CoT](https://arxiv.org/abs/2205.11916) 涉及在原始提示中添加`“让我们一步一步地思考”`。它使用两个提示提取推理和答案。
     > 
     > #### **推理提取**：
     > 
-    > 在这一步中，语言模型思考问题并提出一系列推理，从而得出答案。为此，我们给语言模型一个提示，其中包括问题和一个触发句“`让我们一步一步地思考`”。然后，语言模型将生成一个句子，解释它是如何得出答案的。 [![](images/CoT_example_02.png)](http://qiniu.dev-share.top/image/LLM/CoT_example_02.png)
+    > 在这一步中，语言模型思考问题并提出一系列推理，从而得出答案。为此，我们给语言模型一个提示，其中包括问题和一个触发句“`让我们一步一步地思考`”。然后，语言模型将生成一个句子，解释它是如何得出答案的。 ![](images/CoT_example_02.png)
     > 
     > #### **答案提取**：
     > 
-    > 在第二步中，我们从语言模型的响应中提取最终答案。我们将提示、生成的句子和触发句“`答案是`”连接起来。它告诉语言模型给我们答案。然后，语言模型将生成一个包含问题答案的句子。 [![](images/CoT_example_03.png)](http://qiniu.dev-share.top/image/LLM/CoT_example_03.png)
+    > 在第二步中，我们从语言模型的响应中提取最终答案。我们将提示、生成的句子和触发句“`答案是`”连接起来。它告诉语言模型给我们答案。然后，语言模型将生成一个包含问题答案的句子。 ![](images/CoT_example_03.png)
     
 
 ### 少样本CoT
@@ -94,7 +94,7 @@ categories:
     > - `Few-shot prompting` 用问题和答案`提示LLM`。为LLM提供了一些如何`解决类似问题的示例`。这些示例的呈现方式鼓励 LLM 对问题进行推理并提出导致答案的思维链。
     > - 与少样本相比，[Few-shot CoT](https://arxiv.org/abs/2305.14045) 是一种更有效的技术，可以提高 LLM 的推理能力，因为它为 LLM 提供了类似问题的示例。它可能比`Few-shot`更复杂，因为它需要创建示例提示。然而，`Few-shot CoT`的好处超过了额外的复杂性。
     > 
-    > [![](images/CoT_example_04.png)](http://qiniu.dev-share.top/image/LLM/CoT_example_04.png)
+    > ![](images/CoT_example_04.png)
     > 
     > ```
     > `提升`模型推理精度
@@ -108,7 +108,7 @@ categories:
     > 
     > ```
     
-- > 如果你有一个相当严格的问题，你知道`只能用一组特定的推理模式来解决`，这就是你使用`Few Shot COT`的地方。 您可以提供一些特定问题集所需的推理步骤示例，然后 LLM 将尝试使用类似的步骤解决给定的问题。或者，您可以使用此技术以特定方法为用户解决问题。 例如，如果学生要使用您的应用程序，您可能希望使用 `Few-shot-CoT` 以有趣、简单且易于理解的方式解决问题。 [![](images/CoT_example_05.png)](http://qiniu.dev-share.top/image/LLM/CoT_example_05.png) 这些示例展示了`中间步骤`和`最终解决方案`。 一旦你开发了`思维链`的提示和例子，你可以将它们整合到模型中。 最后，测试模型并根据`思维链提示`和`例子`的表现进行迭代，直到模型的性能令人满意。
+- > 如果你有一个相当严格的问题，你知道`只能用一组特定的推理模式来解决`，这就是你使用`Few Shot COT`的地方。 您可以提供一些特定问题集所需的推理步骤示例，然后 LLM 将尝试使用类似的步骤解决给定的问题。或者，您可以使用此技术以特定方法为用户解决问题。 例如，如果学生要使用您的应用程序，您可能希望使用 `Few-shot-CoT` 以有趣、简单且易于理解的方式解决问题。 ![](images/CoT_example_05.png) 这些示例展示了`中间步骤`和`最终解决方案`。 一旦你开发了`思维链`的提示和例子，你可以将它们整合到模型中。 最后，测试模型并根据`思维链提示`和`例子`的表现进行迭代，直到模型的性能令人满意。
     
 
 ### CoT提示的应用场景
