--- a/_posts/2021/02/2021-02-25-linux-进入单用户模式.md
+++ b/_posts/2021/02/2021-02-25-linux-进入单用户模式.md
@@ -7,16 +7,16 @@ categories:
 
 ###### 1 进入操作系统之前的操作
 
-[![](images/001.png)](http://qiniu.dev-share.top/image/linux/001.png)
+![](images/001.png)
 
 ###### 2 编辑系统启动参数
 
-[![](images/002.png)](http://qiniu.dev-share.top/image/linux/002.png)
+![](images/002.png)
 
 ###### 3 进入单用户模式
 
-[![](images/003.png)](http://qiniu.dev-share.top/image/linux/003.png)
+![](images/003.png)
 
 ###### 4 sysroot/ 目录就是，用户使用的操作系统的根目录， 看到的(/)目录就是指向它。
 
-[![](images/004.png)](http://qiniu.dev-share.top/image/linux/004.png)
+![](images/004.png)
