--- a/_posts/2019/11/2019-11-12-tidb-内存控制.md
+++ b/_posts/2019/11/2019-11-12-tidb-内存控制.md
@@ -17,7 +17,7 @@ categories:
 
 **TiDB不允许修改 操作系统内存分配策略为 `2`，只允许为 `0` 或 `1`**
 
-[![](images/6bfeb96155363daf4ab03a63b19df11b661443d6.png)](https://asktug.com/uploads/default/original/2X/6/6bfeb96155363daf4ab03a63b19df11b661443d6.png)
+![](images/6bfeb96155363daf4ab03a63b19df11b661443d6.png)
 
 [TUG修改内存使用策略导致 TiDB自动下线](https://asktug.com/t/tidb/1716/4 "TUG修改内存使用策略导致 TiDB自动下线")
 
