--- a/_posts/2020/09/2020-09-19-简易练习题库.md
+++ b/_posts/2020/09/2020-09-19-简易练习题库.md
@@ -5,7 +5,7 @@ categories:
   - "javascript"
 ---
 
-[![](images/quest-answer.gif)](http://qiniu.dev-share.top/quest-answer.gif)
+![](images/quest-answer.gif)
 
 * * *
 
