--- a/_posts/2020/10/2020-10-23-cka-学习笔记一.md
+++ b/_posts/2020/10/2020-10-23-cka-学习笔记一.md
@@ -7,7 +7,7 @@ categories:
 
 ##### **整体架构**
 
-[![](images/kubernetes.png)](https://kuboard.cn/images/topology/kubernetes.png)
+![](images/kubernetes.png)
 
 #### **[kubernetes设计图](https://kubernetes.io/zh/docs/concepts/architecture/cloud-controller/#design "kubernetes设计图")**
 
@@ -37,7 +37,7 @@ categories:
 
 ##### **Kubernetes 工作原理图**
 
-[![](images/k8s-%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86.png)](http://qiniu.dev-share.top/k8s-%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86.png)
+![](images/k8s-%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86.png)
 
 1. kubectl 发请求
 2. `kube-apiserver`接收到请求 --> 先询问`kube-controller-manager`用户需要多少资源并将结果告诉`kube-apiserver`
@@ -56,7 +56,7 @@ categories:
 
 ##### **Kubernetes 东西向-网络架构图**
 
-[![](images/k8s-W-E.jpg)](http://qiniu.dev-share.top/k8s-W-E.jpg)
+![](images/k8s-W-E.jpg)
 
 **前提：** 此时iptables中的路由表已经由 kube-proxy完成同步， iptables中存放的是k8s集群内部所有的 **`pod与svc`之间的可路由地址** 1. `Pod D`向`Pod A`发起请求 --> 首先找`Pod D`所在的主机WorkerNode 2的iptables 2. 通过`WorkerNode 2`的iptables找到对应的容器网络接口 **CNI** 3. 由WorkerNode 2的CNI路由进行DNAT转换 --> 找到WorkerNode 1的CNI路由 4. 通过WorkerNode 1的路由找到Service 1相关的 **`Pod A`**
 
@@ -68,7 +68,7 @@ categories:
 
 ##### **Kubernetes 南北向-网络架构图**
 
-[![](images/k8s-N-S.png)](http://qiniu.dev-share.top/k8s-N-S.png)
+![](images/k8s-N-S.png)
 
 **前提：** Service Type: **Load Balancer** 1. 外部请求 --> External IP --> NodePort:31204 --> ClusterIP --> CNI --> 本地iptables --> Pod 2. **`注意`：** 如果Pod与**本地iptables**不在同一个节点上， **本地iptables**会将请求重新指给 **CNI**， 然后路由到其它节点的Pod上
 
@@ -78,11 +78,11 @@ categories:
 
 * * *
 
-[![](images/k8s-%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F.png)](http://qiniu.dev-share.top/k8s-%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F.png)
+![](images/k8s-%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F.png)
 
 * * *
 
-[![](images/k8s-%E6%9C%80%E5%B0%8F%E8%B0%83%E5%BA%A6%E5%8D%95%E5%85%83.png)](http://qiniu.dev-share.top/k8s-%E6%9C%80%E5%B0%8F%E8%B0%83%E5%BA%A6%E5%8D%95%E5%85%83.png)
+![](images/k8s-%E6%9C%80%E5%B0%8F%E8%B0%83%E5%BA%A6%E5%8D%95%E5%85%83.png)
 
 * * *
 
