--- a/_posts/2020/10/2020-10-26-cka-学习笔记二.md
+++ b/_posts/2020/10/2020-10-26-cka-学习笔记二.md
@@ -144,7 +144,7 @@ remote file exists                     # 访问成功
 
 ###### 出的规则测试就不做了，与入的规则同理。 **有个注意点如下图:**
 
-[![](images/network-policy.png)](http://qiniu.dev-share.top/network-policy.png)
+![](images/network-policy.png)
 
 **[图片来源](https://kuboard.cn/learning/k8s-intermediate/service/np.html#to%E5%92%8Cfrom%E9%80%89%E6%8B%A9%E5%99%A8%E7%9A%84%E8%A1%8C%E4%B8%BA "图片来源")**
 
