--- a/_posts/2021/07/2021-07-22-k8s部署consul联邦相关资料整理.md
+++ b/_posts/2021/07/2021-07-22-k8s部署consul联邦相关资料整理.md
@@ -17,37 +17,37 @@ categories:
 
 ###### **[Ingress Gateways on Kubernetes](https://www.consul.io/docs/k8s/connect/ingress-gateways "Ingress Gateways on Kubernetes")**
 
-[![](images/ingress-gateways.png)](http://qiniu.dev-share.top/consul/ingress-gateways.png)
+![](images/ingress-gateways.png)
 
 * * *
 
 ###### **[了解终端网关](https://learn.hashicorp.com/tutorials/consul/service-mesh-terminating-gateways "了解终端网关")**
 
-[![](images/understand-terminating-gateways.png)](http://qiniu.dev-share.top/consul/understand-terminating-gateways.png)
+![](images/understand-terminating-gateways.png)
 
 ###### **[Terminating Gateways](https://www.consul.io/docs/connect/gateways/terminating-gateway#terminating-gateways "Terminating Gateways")**
 
 ###### **[Terminating Gateways on Kubernetes](https://www.consul.io/docs/k8s/connect/terminating-gateways "Terminating Gateways on Kubernetes")**
 
-[![](images/terminating-gateways.png)](http://qiniu.dev-share.top/consul/terminating-gateways.png)
+![](images/terminating-gateways.png)
 
 * * *
 
 ###### **[Mesh Gateways](https://www.consul.io/docs/connect/gateways/mesh-gateway#mesh-gateways "Mesh Gateways")**
 
-[![](images/mesh-gateways.png)](http://qiniu.dev-share.top/consul/mesh-gateways.png)
+![](images/mesh-gateways.png)
 
 * * *
 
 ###### **[Secure Service Mesh Communication Across Kubernetes Clusters](https://learn.hashicorp.com/tutorials/consul/kubernetes-mesh-gateways "Secure Service Mesh Communication Across Kubernetes Clusters")**
 
-[![](images/k8s-mesh-gateway.png)](http://qiniu.dev-share.top/consul/k8s-mesh-gateway.png)
+![](images/k8s-mesh-gateway.png)
 
 * * *
 
 ###### **[WAN Federation Via Mesh Gateways](https://www.consul.io/docs/k8s/installation/multi-cluster#wan-federation-via-mesh-gateways "WAN Federation Via Mesh Gateways")**
 
-[![](images/mesh-gateway-wan-federation.png)](http://qiniu.dev-share.top/consul/mesh-gateway-wan-federation.png)
+![](images/mesh-gateway-wan-federation.png)
 
 * * *
 
