--- a/_posts/2023/11/2023-11-12-wifi温湿度传感器接入.md
+++ b/_posts/2023/11/2023-11-12-wifi温湿度传感器接入.md
@@ -169,7 +169,7 @@ void loop() {
 
 1. 安装MQTT客户端`库`
     
-    - [![](images/WIFI-DHT11-dev-03.png)](http://qiniu.dev-share.top/iot/WIFI-DHT11-dev-03.png)
+    - ![](images/WIFI-DHT11-dev-03.png)
 2. 编写代码
 
 \`\`\` cpp #include <ESP8266WiFi.h> #include <DHT.h> #include <ESP8266WebServer.h> #include <PubSubClient.h>
