--- a/_posts/2024/03/2024-03-30-wifi继电器接入.md
+++ b/_posts/2024/03/2024-03-30-wifi继电器接入.md
@@ -4,16 +4,13 @@ date: "2024-03-30"
 categories: 
   - "树莓派"
 ---
-
 # WIFI继电器接入
 
 ## 开发
-
 > 做法与[WIFI温湿度传感器](http://www.dev-share.top/2023/11/12/wifi%e6%b8%a9%e6%b9%bf%e5%ba%a6%e4%bc%a0%e6%84%9f%e5%99%a8%e6%8e%a5%e5%85%a5/ "WIFI温湿度传感器")开发流程一样，只是编写的代码不同。
 
 ## 代码
-
-```cpp
+``` cpp
 #include <ESP8266WiFi.h>
 
 #define RELAY_PIN 0  // 连接到GPIO0
@@ -127,6 +124,14 @@ void loop() {
 
 ### **效果**
 
-![](images/jidianqi_01.jpg) ![](images/jidianqi_02.jpg) ![](images/jidianqi_03.jpg) ![](images/jidianqi_04.jpg)
+<img src="images/jidianqi_01.jpg" style="zoom:30%;" onclick="window.open('images/jidianqi_01.jpg')"/>
+<img src="images/jidianqi_02.jpg" style="zoom:10%;" onclick="window.open('images/jidianqi_02.jpg')"/>
+<img src="images/jidianqi_03.jpg" style="zoom:30%;" onclick="window.open('images/jidianqi_03.jpg')"/>
+<img src="images/jidianqi_04.jpg" style="zoom:10%;" onclick="window.open('images/jidianqi_04.jpg')"/>
 
 ### **作品**
+
+<video width="560" height="315" controls>
+  <source src="http://qiniu.dev-share.top/iot/zuopin_01.mp4" type="video/mp4">
+</video>
+
