--- a/_posts/2020/09/2020-09-27-istio-混合云方案-一.md
+++ b/_posts/2020/09/2020-09-27-istio-混合云方案-一.md
@@ -43,7 +43,7 @@ categories:
 
    **Admiral** 基于服务唯一标识符，为跨多个集群的 Istio 网格提供自动化配置，使其像单个网格一样工作，该标识符将多个集群上运行的 workload 和服务进行关联。它还为跨集群的 Istio 配置提供了自动同步功能。这同时减轻了开发人员和网格运维人员的负担，并有助于集群的扩展。
 
-## [![](http://qiniu.dev-share.top/Istio_mesh_example_with_admiral.svg)](http://qiniu.dev-share.top/Istio_mesh_example_with_admiral.svg)
+## ![](images/Istio_mesh_example_with_admiral.svg)
 
 * * *
 
