--- a/_posts/2022/09/2022-09-09-理解-rabbitmq-工作原理.md
+++ b/_posts/2022/09/2022-09-09-理解-rabbitmq-工作原理.md
@@ -13,13 +13,13 @@ categories:
 
 ###### 最简单的 消息队列
 
-[![](http://qiniu.dev-share.top/image/rabbitmq-simple.png)](http://qiniu.dev-share.top/image/rabbitmq-simple.png)
+![](images/rabbitmq-simple.png)
 
 * * *
 
 ##### **Work queues 竞争消费者模式**
 
-> - **工作队列**（又名：**任务队列**）背后的主要思想是**避免立即执行资源密集型任务**而不得不等待它完成。相反，我们**将任务安排在以后完成**。 我们将任务封装为消息并将其发送到队列，在后台运行的工作进程将弹出任务并最终执行作业。**当您运行许多消费者时，任务将在他们之间共享**。 [![](http://qiniu.dev-share.top/image/rabbitmq-workqueues.png)](http://qiniu.dev-share.top/image/rabbitmq-workqueues.png)
+> - **工作队列**（又名：**任务队列**）背后的主要思想是**避免立即执行资源密集型任务**而不得不等待它完成。相反，我们**将任务安排在以后完成**。 我们将任务封装为消息并将其发送到队列，在后台运行的工作进程将弹出任务并最终执行作业。**当您运行许多消费者时，任务将在他们之间共享**。 ![](images/rabbitmq-workqueues.png)
 > - 这个概念在 Web 应用程序中特别有用，在这些应用程序中，无法在短暂的 HTTP 请求窗口中处理复杂的任务。
 
 * * *
@@ -33,7 +33,7 @@ categories:
 >     - **队列**是存储消息的缓冲区。
 >     - **消费者**是接收消息的用户应用程序。
 > - **在 `RabbitMQ` 中消息传递模型的核心思想是`生产者从不直接向队列发送任何消息`**。实际上，**生产者通常根本不知道消息是否会被传递到任何队列**。
-> - `相反`，**生产者只能向`交换器`发送消息**。 `交换`是一件非常简单的事情。一方面它接收来自生产者的消息，另一方面它将收到的消息推送到队列中。 `交换`必须确切地知道如何处理它收到的消息。是否应该将消息推送到特定队列？它应该推送到许多队列中吗？或者它应该被丢弃。 [![](http://qiniu.dev-share.top/image/rabbitmq-publish-subscribe.png)](http://qiniu.dev-share.top/image/rabbitmq-publish-subscribe.png)
+> - `相反`，**生产者只能向`交换器`发送消息**。 `交换`是一件非常简单的事情。一方面它接收来自生产者的消息，另一方面它将收到的消息推送到队列中。 `交换`必须确切地知道如何处理它收到的消息。是否应该将消息推送到特定队列？它应该推送到许多队列中吗？或者它应该被丢弃。 ![](images/rabbitmq-publish-subscribe.png)
 
 * * *
 
@@ -60,7 +60,7 @@ categories:
 >         - **`topic` exchange** 背后的逻辑类似于 **`direct` exchange**，可以简单的理解为，通过正则匹配所有队列。
 >         - 但是，对于 **binding\_key** 的正则使用有两个重要的特殊情况(**这也是它与`direct`的区别**)：
 >             - **`*`（星号）**可以只替换一个单词。
->             - **`#` (hash)** 可以代替零个或多个单词。 [![](http://qiniu.dev-share.top/image/rabbitmq-topic-0.png)](http://qiniu.dev-share.top/image/rabbitmq-topic-0.png)
+>             - **`#` (hash)** 可以代替零个或多个单词。 ![](images/rabbitmq-topic-0.png)
 >     - **headers**
 >     - **fanout**
 >         - `fanout` 交换，它并没有给我们太多的灵活性——它只能进行无意识的广播。使用`fanout` 交换是忽略了**routing\_key**的价值
