--- a/_posts/2022/10/2022-10-08-kafka深入浅出.md
+++ b/_posts/2022/10/2022-10-08-kafka深入浅出.md
@@ -35,14 +35,14 @@ categories:
 - **点对点模式**
     
     - 只有一个主题【Topic】
-    - 消费者主动拉取数据，消息收到后消息数据 [![](http://qiniu.dev-share.top/image/kafka/kafka-message-queue-01.gif)](http://qiniu.dev-share.top/image/kafka/kafka-message-queue-01.gif)
+    - 消费者主动拉取数据，消息收到后消息数据 ![](images/kafka-message-queue-01.gif)
 - **发布/订阅模式**
     
     - 可以有多个主题【Topic】（浏览、点赞、收藏、评论等）
     - 消费者消费数据之后，不删除消息数据
     - 可以有多个消费者，每个消费者相互独立，都可以消费到数据
     
-    [![](http://qiniu.dev-share.top/image/kafka/kafka-message-queue-02.png)](http://qiniu.dev-share.top/image/kafka/kafka-message-queue-02.png)
+    ![](images/kafka-message-queue-02.png)
     
 
 * * *
@@ -63,7 +63,7 @@ categories:
     
     - 负责从 **Broker** 订阅并消费消息
     
-    [![](http://qiniu.dev-share.top/image/kafka/Kafka%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86.png)](http://qiniu.dev-share.top/image/kafka/Kafka%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86.png)
+    ![](images/Kafka%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86.png)
     
 
 > 生产者、消费者的概念基本所有人都知道，那么这里主要讲一下 **Broker**
@@ -109,7 +109,7 @@ categories:
 
 ## **基础架构图-主题与分区结构-分区单副本**
 
-[![](http://qiniu.dev-share.top/image/kafka/Kafka%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86-%E4%B8%BB%E9%A2%98%E4%B8%8E%E5%88%86%E5%8C%BA%E7%BB%93%E6%9E%84.png)](http://qiniu.dev-share.top/image/kafka/Kafka%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86-%E4%B8%BB%E9%A2%98%E4%B8%8E%E5%88%86%E5%8C%BA%E7%BB%93%E6%9E%84.png)
+![](images/Kafka%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86-%E4%B8%BB%E9%A2%98%E4%B8%8E%E5%88%86%E5%8C%BA%E7%BB%93%E6%9E%84.png)
 
 - 每条消息被发送到 **broker** 之前，会根据分区规则选择存储到哪个具体的分区。
 - 如果分区规则设定的合理，所有的消息都可以均匀地分配到不同的分区中。
@@ -129,7 +129,7 @@ categories:
 - 副本处于不同的 **broker** 中，当 **leader** 副本出现故障时，从 **follower** 副本中重新选举新的 **leader** 副本对外提供服务。
 - **Kafka** 通过副本机制实现了故障的自动转移。
 
-[![](http://qiniu.dev-share.top/image/kafka/Kafka%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86-%E5%88%86%E5%8C%BA%E5%A4%9A%E5%89%AF%E6%9C%AC.png)](http://qiniu.dev-share.top/image/kafka/Kafka%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86-%E5%88%86%E5%8C%BA%E5%A4%9A%E5%89%AF%E6%9C%AC.png)
+![](images/Kafka%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86-%E5%88%86%E5%8C%BA%E5%A4%9A%E5%89%AF%E6%9C%AC.png)
 
 * * *
 
@@ -141,7 +141,7 @@ categories:
 
 将外部接收过来的数据，传送到 **kafka** 集群
 
-[![](http://qiniu.dev-share.top/image/kafka/Kafka%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86-%E7%94%9F%E4%BA%A7%E8%80%85-%E5%8E%9F%E7%90%86.png)](http://qiniu.dev-share.top/image/kafka/Kafka%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86-%E7%94%9F%E4%BA%A7%E8%80%85-%E5%8E%9F%E7%90%86.png)
+![](images/Kafka%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86-%E7%94%9F%E4%BA%A7%E8%80%85-%E5%8E%9F%E7%90%86.png)
 
 ### **说明**
 
@@ -236,7 +236,7 @@ categories:
     - 开启事务，会在Kafka集群中每一个broker中开启一个事务协调器
     - 事务的划分是根据 【**transactional.id的hashcode值 % 分区数**】，计算出该事务属于哪个分区。
     
-    [![](http://qiniu.dev-share.top/image/kafka/producer-transactional.png)](http://qiniu.dev-share.top/image/kafka/producer-transactional.png)
+    ![](images/producer-transactional.png)
     
 
 * * *
@@ -247,7 +247,7 @@ categories:
 
 ## **生产者-数据乱序**
 
-[![](http://qiniu.dev-share.top/image/kafka/producer-disorder.png)](http://qiniu.dev-share.top/image/kafka/producer-disorder.png)
+![](images/producer-disorder.png)
 
 * * *
 
@@ -257,7 +257,7 @@ categories:
 
 ## **消费者工作原理**
 
-[![](http://qiniu.dev-share.top/image/kafka/image-20220928103144242.png)](http://qiniu.dev-share.top/image/kafka/image-20220928103144242.png)
+![](images/image-20220928103144242.png)
 
 - 消费者和消费者之间**相互独立**
 - 消费者为了提高消费能力，诞生了**消费者组** （某个分区 只能由一个消费者消费）
@@ -265,7 +265,7 @@ categories:
 - 当多个消费者，明确指定为**同一个组ID**时，就会诞生**消费者组**
 - **一个生产者** --> **多个主题分区(Topic-Partition-`*`)** --> **一组消费者(Consumer Group)**
     
-    - [![](http://qiniu.dev-share.top/image/kafka/Kafka%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86-%E7%94%9F%E4%BA%A7%E8%80%85-%E6%B6%88%E8%B4%B9%E8%80%85-%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86.png)](http://qiniu.dev-share.top/image/kafka/Kafka%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86-%E7%94%9F%E4%BA%A7%E8%80%85-%E6%B6%88%E8%B4%B9%E8%80%85-%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86.png)
+    - ![](images/Kafka%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86-%E7%94%9F%E4%BA%A7%E8%80%85-%E6%B6%88%E8%B4%B9%E8%80%85-%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86.png)
 - 建议：
     
     - 通常情况下一个**消费者组(Consumer Group)** 对应一个**主题分区(Topic)**
