添加新的理解
Signed-off-by: 毛巳煜 <eric.mao@lemonit.cn>

--- a/_posts/2023/03/2023-03-10-零散学习整理.md
+++ b/_posts/2023/03/2023-03-10-零散学习整理.md
@@ -104,6 +104,36 @@ categories:
 
 ---
 
+
+
+> 那我有一个更简单的理解方法，所就是说神经网络需要这样一个三维的数组的数据格式来进行传播，只不是 张量 是试用于在 GPU上进行计算的，所以我们要使用张量
+
+> 你的理解基本正确。确实，神经网络（特别是RNN和其他序列模型）通常需要一个三维数组的数据格式来进行前向传播和反向传播。这个三维数组可以用张量来表示，特别是为了在GPU上进行高效计算。以下是对这个概念的更详细解释：
+>
+> ### 三维数组的数据格式
+>
+> 1. 神经网络需要三维数组
+>
+>    ：
+>
+>    - 在处理序列数据时，神经网络通常需要一个三维数组，其中每个维度有特定的含义（如前面所述的批次大小、序列长度和特征维度）。
+>    - 这种三维结构有助于批处理（同时处理多个样本）、处理序列数据的时间步以及每个时间步的特征或输出。
+>
+> ### 张量的优势
+>
+> 1. **张量适用于GPU计算**：
+>    - 张量（Tensor）是一种多维数组，可以在CPU和GPU上进行高效计算。
+>    - 使用张量可以充分利用GPU的并行计算能力，大大加速神经网络的训练和推理过程。
+> 2. **深度学习库的支持**：
+>    - 许多深度学习库（如PyTorch、TensorFlow等）都使用张量作为基础数据结构。
+>    - 这些库提供了丰富的操作函数，可以方便地对张量进行各种数学和矩阵操作，简化了神经网络的实现和优化。
+
+
+
+
+
+---
+
 ---
 
 ---
